k8s/objects/ingress_svc.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myservicea
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  #- host: $NOME_DA_SUA_MAQUINA_EC2_OU_LB_RESPECTIVO
  - host: ec2-18-213-0-200.compute-1.amazonaws.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-node
          servicePort: 8080
